multiples fixes
